# app-web-backend

./: .dockerignore  .gitattributes  docker-compose.yml  package-lock.json  package.json  tsconfig.json  turbo.json
apps/api-gateway/: Dockerfile  nest-cli.json  package-lock.json  package.json  tsconfig.json
apps/api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api-gateway/src/auth/dto/: login.dto.ts
apps/api-gateway/src/auth/entities/: auth.entity.ts
apps/api-gateway/src/cart/: cart.service.ts
apps/api-gateway/src/merchant/: merchant.controller.ts  merchant.module.ts  merchant.service.ts
apps/api-gateway/src/merchant/dto/: create-merchant.dto.ts
apps/api-gateway/src/order/dto/: create-order.dto.ts
apps/api-gateway/src/order/entities/: order-item.entity.ts
apps/api-gateway/src/payments/: payments.controller.ts  payments.module.ts  payments.service.ts
apps/api-gateway/src/payments/dto/: intialize-payment.dto.ts
apps/api-gateway/src/paystack/: paystack.controller.ts  paystack.service.ts
apps/api-gateway/src/product/: constants.ts  product.module.ts  product.service.ts
apps/api-gateway/src/proto/: identity.proto  product.proto
apps/api-gateway/src/proto/auth/: auth.controller.ts
apps/api-gateway/src/proto/cart/: cart.controller.ts  cart.module.ts  cart.service.ts
apps/api-gateway/src/proto/merchant/: constants.ts
apps/api-gateway/src/proto/order/: order.controller.ts  order.gateway.ts  order.module.ts  order.service.ts
apps/api-gateway/src/reviews/: reviews.controller.ts  reviews.module.ts  reviews.service.ts
apps/api-gateway/src/reviews/dto/: create-review.dto.ts
apps/api-gateway/src/users/: users.controller.ts  users.module.ts  users.service.ts
apps/identity/: Dockerfile  nest-cli.json  package-lock.json  package.json  render.yaml
apps/identity/src/: app.module.ts  main.ts
apps/identity/src/proto/: identity.proto
apps/identity/src/users/: users.controller.ts  users.module.ts  users.service.ts
apps/product/: .gitignore  Cargo.toml  Dockerfile  build.rs  lib.rs
apps/product/proto/: product.proto
apps/product/src/: main.rs  server.rs  servercp.rs
(+11 files in other folders)
