[package]
name = "product"
version = "0.1.0"
edition = "2021"
default-run = "product-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = {version = "1.8.0", features = ["v4"]}
prost = "0.12.4"
prost-types = "0.12"
tonic = { version = "0.11.0", features = ["prost"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
tokio-postgres = "0.7.10"
chrono = "0.4.37"
dotenv = "0.15.0"
lazy_static = "1.4.0"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
actix-rt = "2.9.0"
serde_derive = "1.0.197"
env_logger = "0.11.3"


[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "product-server"
path = "src/server.rs"

[[bin]]
name = "product-client"
path = "src/main.rs"